Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25935

CB 5.0 still returns TEMP_FAIL for locked keys when XERROR is enabled

    XMLWordPrintable

Details

    • Untriaged
    • Release Note
    • Unknown

    Description

      If xerror is enabled and a mutation is attempted on a key which is locked via GETL, the server should return a status of LOCKED. Instead, it appears (see packet dump) that TEMPFAIL is still returned.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              bharath.gp Bharath G P
              jmorris Jeff Morris
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty