MB-25935: ep-engine returns TMPFAIL instead of LOCKED for GETL

The correct return code from getl should be LOCKED_TMPFAIL

Change-Id: Idb6f7bff4b95f9616b308f00aa9675761173e291
Reviewed-on: http://review.couchbase.org/83170
Reviewed-by: Sriram Ganesan <sriram@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>